fixing the image not showing correctly

--- a/src/pages/CreateEvents/createEvents.css
+++ b/src/pages/CreateEvents/createEvents.css
@@ -18,7 +18,7 @@ html, body {
 }
 
 /* Styling for the full-page background image */
-body::before {
+body {
     content: "";
     position: fixed;
     top: 0;
